test/sematic/resources/positive/recursive_tydec6.tig
let
type recarr = {name: string, arr: arra, aa: a} 
type arra = array of a
type  a = {name: string, age: number}
type number = int
in
end