test/sematic/resources/negative/false_tydec3.tig
let 
    type t = array of t
in
end